--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -7,8 +7,7 @@
   padding: 18px 36px;
   border-radius: var(--border-rad);
   background-color: var(--accent-clr);
-  transition: var(--animation-time) background-color,
-    var(--animation-time) transform;
+  transition: var(--animation-time) transform;
 }
 
 .btn:hover {
