--- a/src/App.css
+++ b/src/App.css
@@ -73,17 +73,15 @@
   left: 50%;
   transform: translateX(-50%);
   width: fit-content;
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  transition: gap var(--animation-time);
 }
 
-.pricing-content > .all-pricing:hover {
-  gap: 0.75rem;
+.pricing-content > .all-pricing > a {
+  margin-right: 0.5rem;
+  transition: margin var(--animation-time);
 }
 
 .pricing-content > .all-pricing:hover > a {
+  margin-right: 0.75rem;
   text-decoration: underline;
 }
 
